--- a/docker/services/frontend/html/config-data.html
+++ b/docker/services/frontend/html/config-data.html
@@ -3778,7 +3778,10 @@
                     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
                         <div style="display: flex; align-items: center; gap: 0.5rem;">
                             <span style="color: #64c8ff; font-size: 0.85rem; font-weight: 500;">Vorschau</span>
-                            <span style="background: rgba(76, 175, 80, 0.2); color: #4caf50; padding: 0.15rem 0.4rem; border-radius: 3px; font-size: 0.65rem;">${data.sample_data.source || 'DB'}</span>
+                            ${data.sample_data.source === 'TwelveData'
+                                ? `<span style="background: rgba(76, 175, 80, 0.2); color: #4caf50; padding: 0.15rem 0.4rem; border-radius: 3px; font-size: 0.65rem;">TwelveData</span>`
+                                : `<span style="background: rgba(255, 152, 0, 0.2); color: #ff9800; padding: 0.15rem 0.4rem; border-radius: 3px; font-size: 0.65rem;" title="Datenqualität eingeschränkt - TwelveData unterstützt dieses Symbol nicht">⚠ EasyInsight</span>`
+                            }
                         </div>
                         <div style="display: flex; gap: 0.2rem;">
                             <button class="chart-tf-btn active" data-tf="M15" onclick="switchChartTimeframe('M15')" style="padding: 0.2rem 0.5rem; border: 1px solid rgba(100, 200, 255, 0.3); background: rgba(100, 200, 255, 0.2); color: #64c8ff; border-radius: 3px; cursor: pointer; font-size: 0.7rem;">M15</button>
