--- a/docker/services/frontend/html/service-easyinsight.html
+++ b/docker/services/frontend/html/service-easyinsight.html
@@ -70,6 +70,11 @@
             font-weight: 500;
         }
 
+        .service-badge.new {
+            background: rgba(76, 175, 80, 0.2);
+            color: #81c784;
+        }
+
         .subtitle {
             opacity: 0.7;
             font-size: 1.1rem;
@@ -133,6 +138,18 @@
             margin-top: 1rem;
         }
 
+        .endpoint-section {
+            margin-bottom: 1.5rem;
+        }
+
+        .endpoint-section h3 {
+            font-size: 1rem;
+            color: #a78bfa;
+            margin-bottom: 0.75rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
         .endpoint {
             display: flex;
             align-items: center;
@@ -185,6 +202,11 @@
             border-left-color: #ffc107;
         }
 
+        .info-box.success {
+            background: rgba(76, 175, 80, 0.1);
+            border-left-color: #4caf50;
+        }
+
         .quick-links {
             display: flex;
             gap: 1rem;
@@ -211,6 +233,24 @@
             transform: translateY(-2px);
         }
 
+        .indicator-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 0.75rem;
+            margin-top: 1rem;
+        }
+
+        .indicator-item {
+            background: rgba(0, 0, 0, 0.2);
+            padding: 0.75rem;
+            border-radius: 6px;
+            font-size: 0.9rem;
+        }
+
+        .indicator-item strong {
+            color: #64c8ff;
+        }
+
         footer {
             text-align: center;
             padding: 2rem;
@@ -223,85 +263,180 @@
     <header>
         <div class="container">
             <a href="/" class="back-link">&#8592; Zurück zum Dashboard</a>
-            <span class="service-badge">Externer Service</span>
+            <div>
+                <span class="service-badge">Externer Service</span>
+                <span class="service-badge new">API v2.0</span>
+            </div>
         </div>
     </header>
 
     <div class="container">
         <h1>EasyInsight API</h1>
-        <p class="subtitle">Externe Datenquelle für OHLCV-Marktdaten und Symbol-Informationen</p>
+        <p class="subtitle">TwelveData-kompatible API für OHLCV-Marktdaten und technische Indikatoren</p>
 
         <div class="content-card">
             <h2>&#128202; Beschreibung</h2>
             <p>
                 Die EasyInsight API ist die zentrale externe Datenquelle des KI Trading Model Systems.
-                Sie liefert historische und aktuelle Marktdaten (OHLCV - Open, High, Low, Close, Volume)
-                für verschiedene Finanzinstrumente wie Kryptowährungen, Forex-Paare, Indizes und Edelmetalle.
+                Mit der neuen <strong>TwelveData-kompatiblen API (v2.0)</strong> liefert sie historische und
+                aktuelle Marktdaten sowie technische Indikatoren für alle Timeframes (M1 bis MN).
             </p>
             <p>
-                Die Daten werden in einer TimescaleDB gespeichert, einer zeitreihenoptimierten PostgreSQL-Erweiterung,
-                die besonders für Finanzdaten mit hoher Schreiblast und komplexen Zeitabfragen geeignet ist.
+                Die neue API-Struktur ermöglicht eine nahtlose Integration als Fallback für TwelveData
+                und bietet identische Endpunkt-Strukturen für OHLCV-Daten und Indikatoren.
             </p>
+
+            <div class="info-box success">
+                <strong>NEU in v2.0:</strong> TwelveData-kompatible Endpoints mit Unterstützung für alle
+                Timeframes (M1, M5, M15, M30, H1, H4, D1, W1, MN) und individuelle Indikator-Endpoints.
+            </div>
         </div>
 
         <div class="content-card">
-            <h2>&#9881;&#65039; Funktionsweise</h2>
-            <p>Der Service funktioniert wie folgt:</p>
+            <h2>&#9881;&#65039; API-Architektur</h2>
+            <p>Die neue API folgt dem TwelveData-Format:</p>
             <ul>
-                <li><strong>Datensammlung:</strong> Automatisches Abrufen von Marktdaten von verschiedenen Börsen (Kraken, etc.)</li>
-                <li><strong>Speicherung:</strong> Persistente Speicherung in TimescaleDB mit optimierter Zeitreihen-Kompression</li>
-                <li><strong>API-Bereitstellung:</strong> RESTful API mit Swagger-Dokumentation für einfachen Zugriff</li>
-                <li><strong>Kategorisierung:</strong> Automatische Kategorisierung der Symbole (Forex, Crypto, Indices, Metals)</li>
+                <li><strong>/time_series/{symbol}:</strong> OHLCV-Daten für alle Timeframes mit konfigurierbarem Intervall</li>
+                <li><strong>/rsi/{symbol}, /macd/{symbol}, etc.:</strong> Individuelle Indikator-Endpoints</li>
+                <li><strong>/indicators/{symbol}:</strong> Mehrere Indikatoren in einem Request</li>
+                <li><strong>/quote/{symbol}:</strong> Echtzeit-Quote mit aktuellem Preis</li>
+                <li><strong>/symbols:</strong> Symbol-Liste mit Typ-Filterung</li>
             </ul>
 
             <div class="info-box">
-                <strong>Hinweis:</strong> Dieser Service läuft auf einem separaten Server (10.1.19.102) und wird
-                vom KI Trading Model über das Netzwerk angesprochen. Die Latenz wird im Dashboard angezeigt.
+                <strong>Hinweis:</strong> Der Data Service nutzt EasyInsight automatisch als Fallback,
+                wenn TwelveData nicht verfügbar ist oder ein Symbol nicht unterstützt wird.
             </div>
         </div>
 
         <div class="content-card">
-            <h2>&#128279; Wichtige API-Endpunkte</h2>
+            <h2>&#128279; OHLCV-Endpunkte</h2>
             <div class="endpoint-list">
-                <div class="endpoint">
-                    <span class="method">GET</span>
-                    <span class="endpoint-path">/api/symbols</span>
-                    <span class="endpoint-desc">Liste aller verfügbaren Symbole</span>
+                <div class="endpoint-section">
+                    <h3>Time Series (Kerzen-Daten)</h3>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/time_series/{symbol}</span>
+                        <span class="endpoint-desc">OHLCV-Daten (alle Timeframes)</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/quote/{symbol}</span>
+                        <span class="endpoint-desc">Echtzeit-Quote</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/price/{symbol}</span>
+                        <span class="endpoint-desc">Aktueller Preis (lightweight)</span>
+                    </div>
                 </div>
-                <div class="endpoint">
-                    <span class="method">GET</span>
-                    <span class="endpoint-path">/api/ohlcv/{symbol}</span>
-                    <span class="endpoint-desc">OHLCV-Daten für ein Symbol</span>
-                </div>
-                <div class="endpoint">
-                    <span class="method">GET</span>
-                    <span class="endpoint-path">/api/symbols/{symbol}/info</span>
-                    <span class="endpoint-desc">Detailinformationen zu einem Symbol</span>
-                </div>
-                <div class="endpoint">
-                    <span class="method">GET</span>
-                    <span class="endpoint-path">/api/health</span>
-                    <span class="endpoint-desc">Service Health-Check</span>
+
+                <div class="endpoint-section">
+                    <h3>Symbol-Verwaltung</h3>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/symbols</span>
+                        <span class="endpoint-desc">Liste aller Symbole</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/status</span>
+                        <span class="endpoint-desc">API-Status und Health</span>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="content-card">
-            <h2>&#128230; Datenstruktur</h2>
-            <p>Die OHLCV-Daten werden in folgendem Format bereitgestellt:</p>
+            <h2>&#128200; Technische Indikatoren</h2>
+            <p>Folgende Indikatoren sind als individuelle Endpoints verfügbar:</p>
+
+            <div class="indicator-grid">
+                <div class="indicator-item"><strong>RSI</strong> - Relative Strength Index</div>
+                <div class="indicator-item"><strong>MACD</strong> - Moving Average Convergence</div>
+                <div class="indicator-item"><strong>BBands</strong> - Bollinger Bands</div>
+                <div class="indicator-item"><strong>Stoch</strong> - Stochastic Oscillator</div>
+                <div class="indicator-item"><strong>ADX</strong> - Average Directional Index</div>
+                <div class="indicator-item"><strong>ATR</strong> - Average True Range</div>
+                <div class="indicator-item"><strong>EMA</strong> - Exponential Moving Avg</div>
+                <div class="indicator-item"><strong>SMA</strong> - Simple Moving Average</div>
+                <div class="indicator-item"><strong>CCI</strong> - Commodity Channel Index</div>
+                <div class="indicator-item"><strong>Ichimoku</strong> - Ichimoku Cloud</div>
+                <div class="indicator-item"><strong>Strength</strong> - Multi-TF Strength (proprietär)</div>
+            </div>
+
+            <div class="endpoint-list" style="margin-top: 1.5rem;">
+                <div class="endpoint-section">
+                    <h3>Indikator-Endpoints</h3>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/rsi/{symbol}</span>
+                        <span class="endpoint-desc">RSI (time_period=14)</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/macd/{symbol}</span>
+                        <span class="endpoint-desc">MACD (12, 26, 9)</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/bbands/{symbol}</span>
+                        <span class="endpoint-desc">Bollinger Bands (20, sd=2)</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/stoch/{symbol}</span>
+                        <span class="endpoint-desc">Stochastic (14, 3, 3)</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/adx/{symbol}</span>
+                        <span class="endpoint-desc">ADX mit +DI/-DI</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/indicators/{symbol}</span>
+                        <span class="endpoint-desc">Multiple Indikatoren (Batch)</span>
+                    </div>
+                    <div class="endpoint">
+                        <span class="method">GET</span>
+                        <span class="endpoint-path">/strength/{symbol}</span>
+                        <span class="endpoint-desc">Multi-Timeframe Strength</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-card">
+            <h2>&#128337; Unterstützte Timeframes</h2>
+            <p>Mit API v2.0 werden alle Standard-Timeframes unterstützt:</p>
             <ul>
-                <li><strong>timestamp:</strong> Zeitstempel des Datenpunkts (UTC)</li>
-                <li><strong>open:</strong> Eröffnungspreis der Periode</li>
-                <li><strong>high:</strong> Höchstkurs der Periode</li>
-                <li><strong>low:</strong> Tiefstkurs der Periode</li>
-                <li><strong>close:</strong> Schlusskurs der Periode</li>
-                <li><strong>volume:</strong> Handelsvolumen der Periode</li>
+                <li><strong>1min, 5min, 15min, 30min:</strong> Intraday-Daten</li>
+                <li><strong>1h, 4h:</strong> Stündliche Daten</li>
+                <li><strong>1day, 1week, 1month:</strong> Tägliche/Wöchentliche/Monatliche Daten</li>
             </ul>
 
-            <div class="info-box warning">
-                <strong>Wichtig:</strong> Die Datenqualität und -verfügbarkeit hängt von der jeweiligen Börse ab.
-                Nicht alle Symbole haben Daten für alle Zeiträume verfügbar.
+            <div class="info-box">
+                <strong>Interval-Parameter:</strong> Verwende TwelveData-Format (1min, 5min, 15min, 30min, 1h, 4h, 1day, 1week, 1month)
+                bei allen API-Aufrufen.
             </div>
+        </div>
+
+        <div class="content-card">
+            <h2>&#128230; Response-Format</h2>
+            <p>OHLCV-Responses folgen dem TwelveData-Format:</p>
+            <ul>
+                <li><strong>meta:</strong> Metadaten (symbol, interval, type)</li>
+                <li><strong>values:</strong> Array mit OHLCV-Datenpunkten</li>
+                <li><strong>status:</strong> "ok" oder "error"</li>
+            </ul>
+
+            <p style="margin-top: 1rem;">Jeder Datenpunkt enthält:</p>
+            <ul>
+                <li><strong>datetime:</strong> Zeitstempel (YYYY-MM-DD HH:MM:SS)</li>
+                <li><strong>open, high, low, close:</strong> Preisdaten als Strings</li>
+                <li><strong>volume:</strong> Handelsvolumen</li>
+            </ul>
         </div>
 
         <div class="content-card">
@@ -312,6 +447,7 @@
                 <span class="tech-tag">Node.js</span>
                 <span class="tech-tag">Express</span>
                 <span class="tech-tag">Swagger/OpenAPI</span>
+                <span class="tech-tag">TwelveData-kompatibel</span>
             </div>
         </div>
 
@@ -319,14 +455,15 @@
             <h2>&#128640; Schnellzugriff</h2>
             <div class="quick-links">
                 <a href="http://10.1.19.102:3000/swagger/" target="_blank">&#128196; API Dokumentation</a>
-                <a href="http://10.1.19.102:3000/api/symbols" target="_blank">&#128202; Symbolliste</a>
+                <a href="/data/docs#/4.%20EasyInsight" target="_blank">&#128202; Data Service EasyInsight</a>
+                <a href="http://10.1.19.102:3000/api/symbols" target="_blank">&#128203; Symbolliste</a>
                 <a href="/" class="back-link">&#127968; Dashboard</a>
             </div>
         </div>
     </div>
 
     <footer>
-        KI Trading Model - Service Dokumentation | EasyInsight API
+        KI Trading Model - Service Dokumentation | EasyInsight API v2.0 (TwelveData-kompatibel)
     </footer>
 </body>
 </html>
